force-app/main/default/objects/Avance__c/Avance__c.object-meta.xml
<CustomObject>
    <label>Avance</label>
    <nameField>
        <displayFormat>Avance-{000000}</displayFormat>
        <label>Nombre de Avance</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Avances</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>