force-app/main/default/objects/Avance__c/fields/Asunto__c.field-meta.xml
<CustomField>
    <fullName>Asunto__c</fullName>
    <label>Asunto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>