force-app/main/default/objects/Avance__c/fields/Descripcion__c.field-meta.xml
<CustomField>
    <fullName>Descripcion__c</fullName>
    <label>Descripcion</label>
    <length>3200</length>
    <type>LongTextArea</type>
</CustomField>